--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type":"module",
+  "type": "module",
   "scripts": {
     "start": "tsx ./src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -13,7 +13,12 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^22.15.29",
+    "drizzle-kit": "^0.31.1",
     "tsx": "^4.19.4",
     "typescript": "^5.8.3"
+  },
+  "dependencies": {
+    "drizzle-orm": "^0.44.1",
+    "postgres": "^3.4.7"
   }
 }
