--- a/package.json
+++ b/package.json
@@ -2,23 +2,21 @@
   "name": "gator",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "type": "module",
   "scripts": {
     "start": "tsx ./src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "generate": "drizzle-kit generate",
+    "migrate": "drizzle-kit migrate"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
   "devDependencies": {
-    "@types/node": "^22.15.29",
-    "drizzle-kit": "^0.31.1",
-    "tsx": "^4.19.4",
-    "typescript": "^5.8.3"
+    "@types/node": "^22.10.1",
+    "drizzle-kit": "^0.30.1",
+    "tsx": "^4.19.1",
+    "typescript": "^5.7.2"
   },
   "dependencies": {
-    "drizzle-orm": "^0.44.1",
-    "postgres": "^3.4.7"
+    "drizzle-orm": "^0.38.1"
   }
 }
